feat: agent overhaul — compliance, outreach, proactive posting
Major overhaul to make CleanApp an ultra-compliant Moltbook citizen:

- Suspension awareness: health checks before every write operation
- Content dedup: SHA-256 hashing prevents duplicate post bans
- Proactive posting: LLM-generated value posts (TIL, showcase, API collab)
- API outreach: discover + engage agents who could integrate with CleanApp
- Compliance hardened: 30-min post gap, per-submolt limits, content length validation
- Expanded search: 16 discovery queries (was 9)
- New CLI flags: --health-check, --intro, --outreach, --proactive-post, --status
- 3-phase engagement cycle: search/engage → proactive post → outreach

New files: src/outreach.py, src/prompts/original_post.txt, src/prompts/api_outreach.txt
Modified: config.py, memory.py, moltbook_client.py, policy.py, agent.py, __main__.py

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,11 @@ MAX_POSTS_PER_DAY=3
 MAX_COMMENTS_PER_DAY=5
 RELEVANCE_THRESHOLD=0.6
 
+# Compliance
+POST_COOLDOWN_MINUTES=30
+MAX_OUTREACH_PER_DAY=2
+OUTREACH_COOLDOWN_DAYS=7
+
 # Data directory for memory DB
 DATA_DIR=./data
+
