Rebrand agent+skill as general-purpose signal routing (less civictech)

--- a/openclaw-skill/manifest.json
+++ b/openclaw-skill/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "cleanapp_ingest_v1",
   "version": "1.0.0",
-  "description": "Bulk submit reports to CleanApp via /v1/reports:bulkIngest (quarantine lane by default).",
+  "description": "Bulk submit problem signals (bugs/incidents/feedback) to CleanApp via /v1/reports:bulkIngest (quarantine by default).",
   "entrypoint": "run.sh",
   "secrets": [
     "CLEANAPP_API_TOKEN"
@@ -11,4 +11,3 @@
     "network": "HTTPS only (CleanApp ingest endpoint)."
   }
 }
-
